@@ -34,7 +34,7 @@ int32_t start_ssh(int32_t s, char *ip, int32_t port, unsigned char options, char
   if (new_session) {
     if (session) {
       ssh_disconnect(session);
-      //ssh_finalize();
+      // ssh_finalize();
       ssh_free(session);
     } else {
       ssh_init();
